--- a/movie_library/pyproject.toml
+++ b/movie_library/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["Ayat <alkayedayat93@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^4.0.4"
+djangorestframework = "^3.13.1"
+psycopg2-binary = "^2.9.3"
+attr = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -14,3 +17,4 @@ pytest = "^5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
