--- a/movie_library/pyproject.toml
+++ b/movie_library/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.0.4"
 djangorestframework = "^3.13.1"
 psycopg2-binary = "^2.9.3"
 attr = "^0.3.1"
+djangorestframework-simplejwt = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
